@startuml
' Interfaces
interface DiscountStrategy {
    +isApplicable(promocode, order, email): boolean
}

interface DiscountCalculator {
    +calculateDiscount(promocode, order): BigDecimal
}

DiscountCalculator -|> DiscountStrategy

' Concrete validation strategies
class OrderMinimumStrategy {
    +isApplicable(promocode, order, email): boolean
}

class MaxUsesPerEmailStrategy {
    +isApplicable(promocode, order, email): boolean
}

class ProductScopeStrategy {
    +isApplicable(promocode, order, email): boolean
}

' Concrete discount calculators
class PercentageDiscountStrategy {
    +isApplicable(promocode, order, email): boolean
    +calculateDiscount(promocode, order): BigDecimal
}

class FixedDiscountStrategy {
    +isApplicable(promocode, order, email): boolean
    +calculateDiscount(promocode, order): BigDecimal
}

' Services
class PromocodeValidatorService {
    +validate(promocode, order, email): boolean
    +applyDiscount(promocode, order, email): BigDecimal
}

class PromocodeService {
    +validateAndApply(dto): PromocodeResponse
    +createPromocodeAfterValidation(dto): void
}

' Entities
class Promocode {
    -code: String
    -discountType: DiscountType
    -discountValue: BigDecimal
    -minimumOrderAmount: BigDecimal
    -maxUsesPerEmail: int
    -applicableProducts: Set<Product>
    -applicableCategories: Set<Category>
}

class Order {
    -orderItems: List<OrderItem>
    -totalPrice: BigDecimal
}

class OrderItem {
    -product: Product
    -quantity: int
    -price: BigDecimal
}

class Product {
    -id: long
    -name: String
    -category: Category
}

class Category {
    -id: long
    -name: String
}

class PromocodeUsageLog {
    -email: String
    -usedAt: LocalDateTime
    -promocode: Promocode
}

enum DiscountType {
    PERCENTAGE
    FIXED
}

' Relations
DiscountStrategy <|.. OrderMinimumStrategy
DiscountStrategy <|.. MaxUsesPerEmailStrategy
DiscountStrategy <|.. ProductScopeStrategy
DiscountCalculator <|.. PercentageDiscountStrategy
DiscountCalculator <|.. FixedDiscountStrategy

PromocodeValidatorService --> DiscountStrategy
PromocodeValidatorService --> DiscountCalculator
PromocodeValidatorService --> Promocode
PromocodeValidatorService --> Order

Promocode --> Product : applicableProducts
Promocode --> Category : applicableCategories
Order --> OrderItem
OrderItem --> Product
Product --> Category
PromocodeUsageLog --> Promocode
@enduml
